--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -57,3 +57,23 @@ h1 {
     font-size: 1.2em;
     color: #00796b;
 }
+
+#start-new-game {
+    background-color: #4CAF50; 
+    border: none; 
+    color: white;
+    padding: 15px 32px; 
+    text-align: center; 
+    text-decoration: none;
+    display: inline-block;
+    font-size: 24px; 
+    font-family: 'Comic Sans MS', 'Comic Sans', cursive;
+    margin: 4px 2px; 
+    cursor: pointer; 
+    border-radius: 12px;
+    transition: background-color 0.3s;
+}
+
+#start-new-game:hover {
+    background-color: #45a049; /* Darker green on hover */
+}
