--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -49,6 +49,41 @@ h1 {
     margin: 5px 0;
 }
 
+/* Bold the Time Bonuses and Move Bonuses */
+#time-bonus, #move-bonus {
+    font-weight: bold;
+}
+/* High score styling */
+#high-score {
+    border: 2px solid #00796b;
+    background-color: #b2dfdb;
+    padding: 10px;
+    border-radius: 10px;
+    margin-top: 20px;
+    font-size: 1.5em;
+    color: #00796b;
+}
+
+/* High score container */
+#high-score-container {
+    margin-left: 20px;
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    width: 200px;
+    margin-top: 10px; /* Add some space above the high score container */
+}
+
+#high-score-container h3 {
+    text-align: center;
+}
+
+#high-score {
+    text-align: center;
+    font-size: 1.5em;
+    color: #00796b;
+}
+
 /* Game board and game information container */
 #game-board-info-container {
     text-align: center;
