--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -70,6 +70,30 @@ h1 {
     color: #00796b;
 }
 
+/* Style for "Reset High Score" button */
+#reset-high-score {
+    background-color: #00796b; /* Green background */
+    border: none; 
+    color: white;
+    padding: 10px 20px; 
+    text-align: center; 
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px; 
+    font-family: 'Comic Sans MS', 'Comic Sans', cursive;
+    margin: 10px 0; 
+    cursor: pointer; 
+    border-radius: 8px;
+    transition: background-color 0.3s;
+    width: 100%; /* Make the button as wide as its container */
+    box-sizing: border-box; /* Include padding and border in the element's total width and height */
+}
+
+/* Hover effect for the "Reset High Score" button */
+#reset-high-score:hover {
+    background-color: #0b897a; /* Darker green on hover */
+}
+
 /* Game board and game information container */
 #game-board-info-container {
     text-align: center;
@@ -171,7 +195,7 @@ h1 {
     border-radius: 10px;
     text-align: center;
     z-index: 1000;
-}
+}    
 
 #game-message.show {
     display: block;
