--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,6 @@
 /* Body style */
 body {
-    font-family: 'Comic Sans MS', cursive, sans-serif;
+    font-family: 'Comic Sans MS', sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -81,7 +81,7 @@ h1 {
     text-decoration: none;
     display: inline-block;
     font-size: 16px; 
-    font-family: 'Comic Sans MS', 'Comic Sans', cursive;
+    font-family: 'Comic Sans MS', 'Comic Sans';
     margin: 10px 0; 
     cursor: pointer; 
     border-radius: 8px;
@@ -161,7 +161,7 @@ h1 {
     text-decoration: none;
     display: inline-block;
     font-size: 24px; 
-    font-family: 'Comic Sans MS', 'Comic Sans', cursive;
+    font-family: 'Comic Sans MS', 'Comic Sans';
     margin: 4px 2px; 
     cursor: pointer; 
     border-radius: 12px;
@@ -181,7 +181,7 @@ h1 {
     border: none;
     border-radius: 8px;
     font-size: 30px; 
-    font-family: 'Comic Sans MS', 'Comic Sans', cursive;
+    font-family: 'Comic Sans MS', 'Comic Sans';
     cursor: pointer;
     transition: background-color 0.3s;
 }
@@ -196,7 +196,7 @@ h1 {
     border: none;
     border-radius: 8px;
     font-size: 20px; 
-    font-family: 'Comic Sans MS', 'Comic Sans', cursive;
+    font-family: 'Comic Sans MS', 'Comic Sans';
     cursor: pointer;
     transition: background-color 0.3s;
 }
