--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,10 +4,12 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    height: 100vh;
+    justify-content: flex-start;
+    min-height: 100vh;
     margin: 0;
     background-color: #e0f7fa;
+    overflow-y: auto; 
+
 }
 
 /* Style for main heading */
@@ -244,4 +246,51 @@ h1 {
 
 #game-message .close-button:hover{
     color: rgb(139, 139, 139);
+}
+
+/* Responsive styles for mobile phones */
+@media (max-width: 375px) {
+    h1 {
+        font-size: 2em;
+    }
+
+    /* Game styles */
+    #game-container {
+        margin-left: 0;
+        flex-direction: column;
+    }
+
+    #game-board {
+        grid-template-columns: repeat(4, 1fr);
+        grid-gap: 5px;
+    }
+
+    .card {
+        width: 70px;
+        height: 70px;
+    }
+
+    #game-info {
+        flex-direction: column;
+        align-items: center;
+        font-size: 1em;
+    }
+
+    #start-new-game {
+        padding: 10px 20px;
+        font-size: 18px;
+    }
+
+    #reset-high-score {
+        padding: 8px 16px;
+        font-size: 14px;
+    }
+
+    /* Move bonuses below all other elements and hide initially */
+    #bonuses {
+        display: none;
+        margin-top: 20px; 
+        width: 100%; 
+        box-sizing: border-box;
+    }
 }
