--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,7 +4,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     min-height: 100vh;
     margin: 0;
     background-color: #e0f7fa;
